# desyrdl

./: .gitignore  .gitmodules  AddrmapListener.py  DesyListener.py  Jenkinsfile  README.adoc  README.md  RdlFormatter.py  VhdlFormatter.py  adapter_axi4.vhd  fwk_DesyRDL.py  generic_register.vhd  marsupials.rdl  pkg_addr_to_rdl.awk  pkg_axi4.vhd  pkg_reg_marsupials.vhd  pyproject.toml  rdltovhdl.py  reg_field_storage.vhd  requirements.txt  setup.cfg  setup.py  top.rdl  top2.vhd
desyrdl/: ChebyContext.py  DesyListener.py  RdlFormatter.py  desyrdl.py  rdlformatcode.py
desyrdl/templates/: mapfile.mapp.in  pkg_reg.vhd.in  top.vhd.in
doc/: TODO.org  antora.yml  context.adoc  iq_slide.adoc  main.adoc  usage.adoc
examples/: desyrdl_properties.rdl  llrf_fd_top.rdl  standalone.rdl  test_hectare.rdl  top.rdl
hdl/: iq_slide.rdl  iq_slide.vhd
libraries/rdl/: 00_desyrdl_properties.rdl  10_generic_ibus.rdl  desyrdl_properties.rdl  generic_ibus.rdl
libraries/vhdl/: adapter_axi4.vhd
tb/: tb_iq_slide.vhd
tb/adapter_axi4/: modelsim_do.tcl  tb_TestCtrl.vhd  tb_top.vhd  wave.do
tb/axi4_spi/: axi4_spi.vhd  modelsim_do.tcl  tb_TestCtrl.vhd  tb_top.vhd  test_hectare_top.vhd  top.rdl
tb/decoder_axi4/: modelsim_do.tcl  tb_top.vhd  (+1 more)
templates/: PKG_AXI.vhd  PKG_II.vhd  adapter_axi4.vhd  adapter_axi4.vhd.in  axi4_to_axi4.vhd  axi4_to_ibus.vhd  mapfile.mapp.in  minimal.vhd.in  pkg_reg.vhd.in  pkg_reg_common.vhd  pkg_types.vhd  reg_field_counter.vhd  reg_field_counter.vhd.in  reg_field_storage.vhd  reg_field_storage.vhd.in  register.vhd  register.vhd.in  top.vhd.in
test/: run.sh
(+59 files in other folders)
