[metadata]
name = desyrdl
version = attr: desyrdl.__version__
description = DesyRDL: Tool for address space and register generation
long_description = file: README.md
long_description_content_type = text/markdown
author = 'Michael Büchler; Lukasz Butkowski'
author_email = 'michael.buechler@desy.de; lukasz.butkowski@desy.de'
platforms = any
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Development Status :: 4 - Beta
project_urls =
    Source = https://gitlab.desy.de/fpgafw/tools/desyrdl

[options]
packages = desyrdl
include_package_data = True
install_requires =
    systemrdl-compiler >= 1.25
    jinja2 >= 3.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    desyrdl = desyrdl.desyrdl:main
